--- a/style.css
+++ b/style.css
@@ -176,3 +176,21 @@ nav.menu ul li.btn:hover a i {
   border-radius: 5px;
   padding: 0 4px;
 }
+
+
+
+.portfolio-image {
+  max-width: 600px;
+  margin: 1.5rem auto;
+  text-align: center;
+}
+
+
+.portfolio-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 1rem;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+}
+
+
