--- a/style.css
+++ b/style.css
@@ -186,3 +186,20 @@ nav.menu ul li.btn:hover a i {
 }
 
 
+@media screen and (max-width: 768px) {
+  .content-box,
+  .cv-section,
+  .contact-section {
+    padding: 1rem;
+    width: 90%;
+  }
+
+  nav.menu ul {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .img-portfolio {
+    width: 100%;
+  }
+}
